fix(css): increase dialogue box z-index so it shows over OS desktop

--- a/styles/app.css
+++ b/styles/app.css
@@ -81,7 +81,7 @@ div.interactable:hover {
     color: white;
     pointer-events: auto;
     box-sizing: border-box;
-    z-index: 100;
+    z-index: 2000;
 }
 
 #dialogue-text {
